# movie-watchlist

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_30_1431-c43eb0f6fac7_baseline_schema.py  2026_07_16_1200-d3fedd64800a_add_password_hash_to_users.py
app/: config.py  main.py  models.py  security.py  storage.py
app/static/: style.css
app/storage/: __init__.py  base.py  sqlalchemy_repo.py  sqlite_repo.py
app/templates/: _movie_form.html  _movie_row.html  _movie_row_edit.html  _user_name.html  _user_name_edit.html  base.html  index.html
tests/: conftest.py  test_factory.py  test_migrations.py  test_movies.py  test_repository.py  test_security.py  test_storage.py  test_trivial.py
tests/e2e/: test_container.py
