[project]
name = "movie-watchlist"
version = "0.1.0"
description = "Movie watchlist - throwaway FastAPI app for internship Week 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # Baseline
    "E", "F", "I", "B", "UP",
    # Additions
    "W", "C4", "PIE", "RUF", "SIM", "PTH", "FURB", "A", "T10",
    "DTZ", "PT", "C90"
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=95"

[tool.ty]
