[project]
name = "movie-watchlist"
version = "0.1.0"
description = "Movie watchlist - throwaway FastAPI app for internship Week 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.21",
    "testcontainers>=4.0",
    "ty>=0.0.59",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    # Baseline
    "E", "F", "I", "B", "UP",
    # Additions
    "W", "C4", "PIE", "RUF", "SIM", "PTH", "FURB", "A", "T10",
    "DTZ", "PT", "C90"
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-branch --cov-report=term-missing --cov-report=xml --cov-fail-under=95 -m 'not e2e'"
markers = ["e2e: end-to-end tests that run against a live Docker container; deselected by default",]

[tool.ty]
